--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,24 @@ ul {
   text-decoration: none;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 .container {
   width: 1200px;
   margin: 0 auto;
@@ -45,7 +63,11 @@ ul {
 
 /* Header */
 .header {
-  background-color: rebeccapurple;
+  background-color: var(--background-color-white);
+}
+
+.header > .container {
+  display: flex;
 }
 
 .header__logo {
@@ -55,8 +77,9 @@ ul {
   line-height: 1.3;
   letter-spacing: 0.03em;
   color: var(--logo-color);
-  display: inline-block;
-  outline: 2px solid red;
+  align-items: center;
+  padding-top: 24px;
+  padding-bottom: 25px;
 }
 
 .logo-web {
@@ -64,12 +87,16 @@ ul {
 }
 
 .header__nav {
+  display: flex;
+  align-items: center;
   background-color: var(--background-color-white);
   letter-spacing: 0.02em;
 }
 
 .header__nav-list {
-  outline: 2px solid orange;
+  margin-left: 93px;
+  display: flex;
+  gap: 50px;
 }
 
 .header__nav-list-item {
@@ -87,7 +114,10 @@ ul {
 }
 
 .header-contacts {
-  outline: 2px solid green;
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+  gap: 50px;
 }
 
 .header__contacts-item {
@@ -110,7 +140,6 @@ ul {
   background-color: var(--background-color-dark);
   padding-top: 200px;
   padding-bottom: 200px;
-  background-color: yellow;
 }
 
 .hero__title {
@@ -121,7 +150,6 @@ ul {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--secondary-text-color);
-  background-color: red;
   max-width: 696px;
   margin-left: auto;
   margin-right: auto;
@@ -146,13 +174,12 @@ ul {
   margin-top: 30px;
   margin-left: auto;
   margin-right: auto;
+  padding: 10px 32px;
 }
 
 /* About us */
 
 .about-us {
-  padding-top: 94px;
-  padding-bottom: 94px;
   background-color: var(--background-color-white);
   background-color: skyblue;
 }
@@ -182,8 +209,6 @@ ul {
 /* Our team */
 
 .our-team {
-  padding-top: 94px;
-  padding-bottom: 94px;
   background-color: var(--background-color-grey);
 }
 
@@ -299,18 +324,4 @@ ul {
   font-size: 16px;
   line-height: 1.88;
   color: var(--primary-text-color);
-}
-
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
 }
