--- a/css/styles.css
+++ b/css/styles.css
@@ -54,15 +54,16 @@ ul {
 }
 
 .container {
-  width: 1200px;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+  width: 1200px;
 }
 
 /* Header */
 .header {
   background-color: var(--background-color-white);
+  border-bottom: 1px solid #ececec;
 }
 
 .header > .container {
@@ -70,15 +71,15 @@ ul {
 }
 
 .header__logo {
+  padding-top: 24px;
+  padding-bottom: 25px;
+  align-items: center;
   font-family: 'Raleway', sans-serif;
   font-size: 26px;
   font-weight: 700;
   line-height: 1.3;
   letter-spacing: 0.03em;
   color: var(--logo-color);
-  align-items: center;
-  padding-top: 24px;
-  padding-bottom: 25px;
 }
 
 .logo-web {
@@ -88,8 +89,8 @@ ul {
 .header__nav {
   display: flex;
   align-items: center;
-  background-color: var(--background-color-white);
   letter-spacing: 0.02em;
+  background-color: var(--background-color-white);
 }
 
 .header__nav-list {
@@ -136,12 +137,15 @@ ul {
 /* Hero */
 
 .hero {
-  background-color: var(--background-color-dark);
   padding-top: 200px;
   padding-bottom: 200px;
+  background-color: var(--background-color-dark);
 }
 
 .hero__title {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 696px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -149,32 +153,27 @@ ul {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--secondary-text-color);
-  max-width: 696px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .hero__button {
-  font-family: 'Roboto', sans-serif;
-  background: var(--color-accent);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: var(--secondary-text-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  cursor: pointer;
   margin-top: 30px;
   margin-left: auto;
   margin-right: auto;
   padding: 10px 32px;
+  display: flex;
+  align-items: center;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  text-align: center;
+  letter-spacing: 0.06em;
+  border-radius: 4px;
   border-color: transparent;
+  color: var(--secondary-text-color);
+  background: var(--color-accent);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
 }
 
 /* About us */
